# durin

./: .coverage  .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  SECURITY.md  hatch_build.py  pyproject.toml
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml
.github/codeql/: codeql-config.yml
.github/workflows/: bridge-release.yml  bridge.yml  ci.yml  codeql.yml  dependabot-auto-merge.yml  mcp-catalog.yml  model-catalog.yml  release.yml  webui.yml
benchmarks/swebench_5/: 2026-05-17_carry_delib_detailed.jsonl  2026-05-17_carry_delib_predictions.jsonl  2026-05-17_carry_delib_stats.json  2026-05-17_carry_nodelib_detailed.jsonl  2026-05-17_durin_delib_v1_predictions.jsonl  2026-05-17_durin_delib_v2_detailed.jsonl  2026-05-17_durin_full.jsonl  2026-05-17_durin_full_detailed.jsonl  2026-05-17_durin_full_stats.json  2026-05-17_durin_no_delib_predictions.jsonl  2026-05-17_durin_no_delib_stats.json  2026-05-17_durin_v3.jsonl  2026-05-17_durin_v3_detailed.jsonl  2026-05-17_durin_v3_stats.json  2026-05-17_durin_v4.jsonl  2026-05-17_durin_v4_detailed.jsonl  2026-05-17_durin_v4_stats.json  2026-05-17_durin_v4b.jsonl  2026-05-17_durin_v4b_detailed.jsonl  2026-05-17_durin_v4b_stats.json  2026-05-17_nanobot_base.jsonl  2026-05-17_nanobot_base_detailed.jsonl  2026-05-17_nanobot_real.jsonl  2026-05-17_nanobot_real_detailed.jsonl  2026-05-17_nanobot_real_stats.json  2026-05-17_v2_carry_delib_stats_run2.json  2026-05-17_v2_carry_nodelib_stats_run2.json  2026-05-17_v3_plan_nodelib_stats.json  2026-05-18_docker_int_nanobot_test.jsonl  2026-05-18_docker_int_nanobot_test_detailed.jsonl  2026-05-18_docker_int_nanobot_test_stats.json  2026-05-18_docker_int_test.jsonl  2026-05-18_docker_int_test_detailed.jsonl  2026-05-18_docker_int_test_stats.json  2026-05-18_docker_v5_durin.jsonl  2026-05-18_docker_v5_durin_detailed.jsonl  2026-05-18_docker_v5_durin_stats.json  2026-05-18_docker_v5_nanobot.jsonl  2026-05-18_docker_v5_nanobot_detailed.jsonl  2026-05-18_docker_v5_nanobot_stats.json  (+19 more)
bridge/: frames.go  frames_test.go  go.mod  go.sum  main.go  server.go  server_test.go  wa.go  wa_test.go
contract/: openapi-v1.json
design/: DESIGN.md  identity-preview.html  tokens.css
docs/: 01_durin_general_vision.md  01_durin_vision_general.md  01_roadmap.md  02_bitacora.md  02_durin_guiding_thread.md  02_durin_hilo_conductor.md  03_durin_memoria.md  03_durin_memory.md  03_memory_design.md  04_agent_strategies_catalog.md  04_durin_contexto_operativo.md  04_durin_operational_context.md  05_bitacora_hilo_conductor.md  05_log_guiding_thread.md  06_bitacora_benchmark.md  06_log_benchmark.md  06_log_experiments.md  07_design_plan_and_stimuli.md  07_diseño_plan_y_estimulos.md  07_external_agents_review.md  08_memory_phase2_proposal.md  09_daily_driver_plan.md  10_smoke_test_report.md  10_textual_migration.md  11_secrets_design.md  12_web_config_parity.md  13_interactive_tool_renders.md  14_typed_entities_proposal.md  18_entity_centric_plan.md  20_pendings.md  21_integration_and_critical_review.md  23_t1_implementation_plan.md  24_t1_wiring_e2e_tests.md  25_post_t1_state_and_t2_horizon.md  26_memory_graph_view.md  28_locomo_results_and_sota_gap.md  29_exploracion_datos_y_relaciones.md  ARCHITECTURE.md  INSTALL.md  README.md  (+6 more)
docs/arch/: memory.md  observability.md
docs/architecture/: README.md  api.md  concurrency.md  loop.md  observability.md  ux.md
docs/archive/: 04_agent_strategies_catalog.md  06_log_experiments.md  08_memory_phase2_proposal.md  09_code_audit.md  09_daily_driver_plan.md  10_smoke_test_report.md  14_typed_entities_proposal.md  15_background_review_proposal.md  16_entity_centric_memory.md  17_entity_centric_synthesis.md  19_implementation_plan.md  22_critiques_validated_against_real_systems.md  30_arch_memory_legacy.md  31_memory_implementation_roadmap.md  32_memory_audit_reconciliation.md  36_post_t1_state_and_t2_horizon.md  37_memory_graph_view.md  38_locomo_benchmark.md  39_locomo_results_and_sota_gap.md  README.md  checkpoint_index_strategy.md  impl_phase1_write_substrate.md  impl_phase2_upsert_tool.md  impl_phase4_refine_dream.md  impl_phase5_references.md  impl_phase7_deletion_tombstones.md  memory_context_preload.md  memory_model_redesign.md  memory_seq_consulta.md  memory_seq_ingesta.md
docs/design/: entity-reference-linking-HANDOFF.md  entity-reference-linking-plan.md
docs/guide/: channels.md  cli.md  configuration.md  documents.md  install.md  loops.md  providers.md  workflows.md
docs/internals/: README.md  api.md  channels.md  concurrency.md  cron.md  loop.md  loops.md  mcp.md  observability.md  providers.md  security.md  tools.md  ux.md  voice.md  workflow.md
docs/memory/: 00_overview.md  01_data_and_entities.md  02_indexing.md  03_search_pipeline.md  04_agent_tools.md  05_dream_cold_path.md  06_prompts_and_instructions.md  07_telemetry_and_observability.md  08_scope_and_discarded.md  09_implementation_roadmap.md  10_remaining_work.md  (+4 more)
durin/: __init__.py  __main__.py  changelog.py  durin_sdk.py  extras.py  registry_graph.py
scripts/: _vendor_sources.py  build_mcp_catalog.py  dream_dryrun.py  gen-bridge-checksums.sh  gen_openapi.py  gen_webui_tokens.py  refresh_model_capabilities.py  simulate_posture_session.py  swebench_docker.py  swebench_eval.py  swebench_nanobot_eval.py  swebench_run_inside.py  test_embedding_name_variations.py  tui_e2e_all.py  tui_smoke.py
tests/: conftest.py  test_api_attachment.py  test_api_stream.py  test_build_status.py  test_context_documents.py  test_document_parsing.py  test_extras.py  test_extras_endpoints.py  test_extras_installer.py  test_extras_stt.py  test_extras_tts.py  test_msteams.py  test_no_hardcoded_aux_model.py  test_openai_api.py  test_package_version.py  test_prompt_tokens_anchor.py  test_tool_contextvars.py  test_truncate_direction.py  test_truncate_text_shadowing.py  test_tts_config.py  test_voice_config.py  test_webui_packaging.py
webui/: .gitignore  README.md  index.html  node_modules  package-lock.json  package.json  tailwind.config.js  tsconfig.build.json  vite.config.ts
(+2111 files in other folders)
