[project]
name = "durin-agent"
version = "0.1.0a11"
description = "Personal AI agent with daily-driver CLI, modal TUI, and graph-based memory"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Marcelo Marmol"}
]
keywords = ["ai", "agent", "memory", "posture"]

dependencies = [
    "typer>=0.20.0,<1.0.0",
    "anthropic>=0.45.0,<1.0.0",
    "openai>=2.8.0",
    "pydantic>=2.12.0,<3.0.0",
    "pydantic-settings>=2.12.0,<3.0.0",
    "httpx>=0.28.0,<1.0.0",
    "loguru>=0.7.3,<1.0.0",
    "rich>=14.0.0,<16.0.0",
    "python-telegram-bot[socks]>=22.6,<23.0",
    "tiktoken>=0.12.0,<1.0.0",
    "jinja2>=3.1.0,<4.0.0",
    "pyyaml>=6.0,<7.0.0",
    "json-repair>=0.57.0,<1.0.0",
    "chardet>=3.0.2,<8.0.0",
    "prompt-toolkit>=3.0.50,<4.0.0",
    "litellm>=1.40.0",
    "croniter>=6.0.0,<7.0.0",
    "dulwich>=0.22.0,<2.0.0",
    "filelock>=3.25.2",
    "pypdf>=5.0.0,<7.0.0",
    "python-docx>=1.1.0,<2.0.0",
    "openpyxl>=3.1.0,<4.0.0",
    "python-pptx>=1.0.0,<2.0.0",
    "websockets>=13.0,<17.0",
    "lark-oapi>=1.4.0,<2.0.0",
    "textual>=8.2.0,<9.0.0",
    # `questionary` powers `durin onboard`'s interactive wizard. It used
    # to be an indirect dep that sometimes didn't get pulled in; making
    # it explicit guarantees the wizard always works after a fresh
    # install instead of failing with "needs the 'questionary' package".
    "questionary>=2.0.0,<3.0.0",
    # Used by `entities.slugify_name` for transliterating non-Latin
    # scripts (CJK, Cyrillic, Arabic, etc.) into ASCII slugs per
    # doc memory §4.5. Pure Python, no native deps.
    "unidecode>=1.4,<2.0",
    # RFC 6902 JSON Patch — used by Dream apply pipeline (doc memory
    # §6) to apply LLM-emitted ops to an entity page's frontmatter.
    # Pure Python.
    "jsonpatch>=1.33,<2.0",
    # File-system watcher for the memory subsystem: detects manual
    # edits to `memory/**/*.md` (vim, git checkout, etc.) and triggers
    # a synchronous re-index. Doc 02 §6.3. macOS uses FSEvents,
    # Linux uses inotify; both via this wrapper.
    "watchdog>=4.0,<7.0",
]

[project.optional-dependencies]
oauth = [
    "oauth-cli-kit>=0.1.0",
]
mcp = [
    "mcp>=1.26.0,<2.0.0",
]
web = [
    "ddgs>=9.5.5,<10.0.0",
    "readability-lxml>=0.8.4,<1.0.0",
]
slack = [
    "slack-sdk>=3.39.0,<4.0.0",
    "slackify-markdown>=0.2.0,<1.0.0",
]
discord = [
    "discord.py>=2.5.2,<3.0.0",
]
local = [
    "llama-cpp-python>=0.3.0",
    "huggingface-hub>=0.20.0",
]
memory = [
    # Pure-Python ONNX embedding runtime; auto-downloads model files on
    # first use. Required for vector retrieval (Phase 2). Default model
    # is paraphrase-multilingual-MiniLM-L12-v2 (~220 MB) — see
    # docs/08_memory_phase2_proposal.md §0d.2.
    #
    # Pinned narrowly: fastembed retires/renames models between minor
    # releases (e5-small was dropped in 0.6, MiniLM-L12 changed pooling
    # 0.5→0.6). Stay inside one stable catalog window. Bump deliberately
    # after re-validating the wizard's model list against the new catalog
    # (see tests/memory/test_embedding_catalog.py).
    "fastembed>=0.7,<0.9",
    # Embedded vector DB for the memory index. Single-file storage, no
    # daemon, optional cloud backends. Phase 2.2.
    "lancedb>=0.30.0,<1.0.0",
]
cross-encoder = [
    # Cross-encoder reranker for the memory search pipeline (doc 03 §9 /
    # P4.1). OFF by default — operator opts in via
    # `cfg.memory.search.cross_encoder.enabled = true`. When the flag is
    # on but this extra is NOT installed, `durin.memory.cross_encoder`
    # logs ERROR and falls back to pure RRF fusion (search still ships,
    # ranking quality reduced). H25 (2026-05-30) made the silent-disable
    # loud so operators know their config intent became a no-op.
    #
    # sentence-transformers pulls in torch (~1 GB) — large dep, hence
    # gated behind the extra rather than in `memory`.
    "sentence-transformers>=3.0,<6.0",
]
api = [
    # Starlette ASGI framework + uvicorn server for the new HTTP front door (SP4).
    # Both are transitively installed via mcp, but declared here so any install
    # path without [mcp] still gets them.
    "starlette>=1.3,<2",
    "uvicorn>=0.49,<1",
]
dev = [
    "pytest>=9.0.0,<10.0.0",
    "pytest-asyncio>=1.3.0,<2.0.0",
    "pytest-cov>=6.0.0,<8.0.0",
    "ruff>=0.1.0",
]

[project.scripts]
durin = "durin.cli.commands:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["durin"]
# The built webui SPA lives at durin/web/dist/ — it's VCS-ignored
# (it's a build artifact) but MUST ship inside the wheel so the
# `durin gateway` dashboard works. `artifacts` force-includes paths
# that would otherwise be excluded by the .gitignore.
artifacts = ["durin/web/dist/**/*"]

# Build the webui SPA before the wheel is assembled (so durin/web/dist/ exists
# for the force-include) and assert it landed in the wheel. Without this hook a
# bare `python -m build` shipped a wheel with NO SPA → a 404 dashboard. The hook
# no-ops for editable installs, when DURIN_SKIP_WEBUI_BUILD=1, or when a prebuilt
# durin/web/dist/ already exists (e.g. CI builds it explicitly first).
[tool.hatch.build.targets.wheel.hooks.custom]
path = "hatch_build.py"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
# Heavy modules are imported lazily inside the gateway entrypoint to keep CLI
# startup fast — intentional imports after code.
"durin/cli/commands.py" = ["E402"]
# Bundled example skill content (shipped, not durin source) follows its own style.
"durin/skills/**" = ["N806"]
# Ad-hoc benchmark/analysis scripts.
"scripts/**" = ["N803", "N806"]
# Test code intentionally relaxes naming/style: pytest.importorskip imports
# (E402), non-pep8 fixture/mock/constant names (N8xx), inline setup statements
# (E702), short loop vars (E741), and unused result bindings (F841).
"tests/**" = ["E402", "E702", "E741", "F841", "N801", "N802", "N803", "N805", "N806", "N812", "N816"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
filterwarnings = [
    # Third-party: the lark_oapi (Feishu) SDK still uses the deprecated
    # pkg_resources namespace API on import. Not our code; nothing to fix
    # until the SDK migrates. Scoped to the exact messages so our own
    # deprecations still surface.
    "ignore:Deprecated call to `pkg_resources.declare_namespace:DeprecationWarning",
    "ignore:pkg_resources is deprecated as an API:DeprecationWarning",
]
markers = [
    "ollama: requires running Ollama instance with a local model",
    "local_llm: requires llama-cpp-python and a cached GGUF model",
    "slow: marks slow / live-LLM end-to-end tests (opt-in via env)",
    "network: live tests against real skill registries (opt-in: DURIN_LIVE_REGISTRY_TESTS=1)",
]
